--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -116,7 +116,7 @@ jobs:
           done
 
           # Convert arrays to JSON
-          MATRIX_JSON=$(echo "${LABELS[@]}" | jq -s . | jq -c .)
+          MATRIX_JSON=$(echo "${INSTANCES[@]}" | jq -s . | jq -c .)
           echo $MATRIX_JSON
           echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
