--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -122,7 +122,7 @@ jobs:
 
       - name: Show Aggregated Data
         run: |
-          run: echo "Matrix: ${{ steps.aggregate.outputs.matrix }}"
+          echo "Matrix: ${{ steps.aggregate.outputs.matrix }}"
         
   build-on-aws:
     name: Build on aws
