--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -153,7 +153,7 @@ jobs:
           . /root/spack/share/spack/setup-env.sh
           spack load cmake@3.30.5
           spack load hip
-          spack load kokkos@4.3.00
+          #spack load kokkos@4.3.00
           module load clang/17
           cmake --version
           #CC=clang \
