--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -223,7 +223,7 @@ jobs:
           source-directory: ${{github.event.number}}
           destination-github-username: 'exasim-project'
           destination-repository-name: 'NeoFOAM-BenchmarkData'
-          target-directory: ${{github.event.number}}/gdnxlarge
+          target-directory: ${{github.event.number}}/${{matrix.instance.ec2-type}}
           user-email: github-actions@github.com
           target-branch: main
   stop-runner:
