add upwind benchmark

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -28,3 +28,4 @@ endfunction()
 
 add_subdirectory(fields)
 add_subdirectory(finiteVolume/cellCentred/operator)
+add_subdirectory(finiteVolume/cellCentred/interpolation)
