--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -106,10 +106,13 @@ function(neofoam_unit_test_mpi TEST)
   endif()
 endfunction()
 
-# add_subdirectory(core) add_subdirectory(dsl) add_subdirectory(fields)
-# add_subdirectory(finiteVolume)
+add_subdirectory(core)
+# add_subdirectory(dsl)
+add_subdirectory(fields)
+add_subdirectory(finiteVolume)
 add_subdirectory(linearAlgebra)
-# add_subdirectory(mesh) add_subdirectory(timeIntegration)
+add_subdirectory(mesh)
+add_subdirectory(timeIntegration)
 if(NEOFOAM_WITH_PETSC)
   add_subdirectory(petsc)
   add_subdirectory(matrixPetsc)
