--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -112,7 +112,7 @@ add_subdirectory(fields)
 add_subdirectory(finiteVolume)
 add_subdirectory(linearAlgebra)
 add_subdirectory(mesh)
-add_subdirectory(timeIntegration)
+# add_subdirectory(timeIntegration)
 if(NEOFOAM_WITH_PETSC)
   add_subdirectory(petsc)
   add_subdirectory(matrixPetsc)
