--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(cellCentred/fields)
 add_subdirectory(cellCentred/boundary)
 add_subdirectory(cellCentred/interpolation)
 add_subdirectory(cellCentred/operator)
+add_subdirectory(cellCentred/auxiliary)
